--- a/frontend/src/components/Menu/index.css
+++ b/frontend/src/components/Menu/index.css
@@ -12,8 +12,8 @@
 .menu-ul {
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  gap: 30px;
+  justify-content: center;
+  gap: 100px;
 }
 
 .menu-ul a {
