--- a/frontend/src/components/Card/index.css
+++ b/frontend/src/components/Card/index.css
@@ -1,7 +1,7 @@
 .card-container {
-  width: 20%;
+  width: 100%;
   border: 1px solid #000;
-  border-radius: 4px;
+  background-color: #fff;
 }
 
 .card-image {
@@ -18,9 +18,10 @@
   right: 5px;
   border-radius: 100%;
   background-color: #fff;
-  width: 30px;
-  padding: 2px;
-  box-shadow: 1px 0px 0px #0f0f0f;
+  width: 35px;
+  padding: 4px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
   color: #fff;
   display: flex;
   align-items: center;
@@ -33,9 +34,10 @@
   right: 5px;
   border-radius: 100%;
   background-color: #fff;
-  box-shadow: 1px 0px 0px #0f0f0f;
-  width: 30px;
-  padding: 2px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  width: 35px;
+  padding: 4px;
   color: #fff;
   display: flex;
   align-items: center;
@@ -48,4 +50,9 @@
 
 .card-content {
   padding: 10px;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: bold;
 }
